--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <p class="date-posted">28 Jun 2020</p>
               </div>
             </div>
-            <div class="article-share" aria-pressed="false">
+            <div class="article-share" aria-pressed="false" role="link">
               <i class="bx bxs-share"></i>
             </div>
             <div class="share-details flex" aria-hidden="true">
@@ -71,7 +71,7 @@
         </div>
       </article>
     </main>
-    <div class="attribution">
+    <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
         Frontend Mentor
@@ -81,6 +81,6 @@
         Shaqeeb
       </a>
       .
-    </div>
+    </div> -->
   </body>
 </html>
